--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -57,11 +57,12 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/header"
-        android:layout_margin="10dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/dUser"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/header"
+            android:layout_margin="10dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/ImgProfile"
@@ -93,6 +94,26 @@
             android:fontFamily="@font/alegreya"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/btnAddImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Добавить изображение"
+            app:layout_constraintTop_toBottomOf="@+id/CLUser"
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="addImage"/>
+
+        <GridView
+            android:id="@+id/lvImg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/btnAddImage"
+            app:layout_constraintBottom_toTopOf="@+id/bottom"
+            android:numColumns="2"
+            />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/bottom"
